--- a/Image_Market_Project/templates/home.html
+++ b/Image_Market_Project/templates/home.html
@@ -9,9 +9,105 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Image World</title>
+
+    <style>
+      .bg{
+        background: #D50000 !important;
+      }
+
+      .list-group-item.active{
+        background: #D50000 !important;
+        border-color: #D50000 !important;
+      }
+
+      /* For Making the grid */
+      .card-columns {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-gap: 1rem;
+        grid-template-rows: auto;
+        column-count: 1;
+      }
+      body {
+        overflow-x: hidden;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    {% include 'navbar.html' %}
+
+<!-- Main Code -->
+<div class="container-fluid">
+
+    <div class="row">
+
+      <!-- Column - A for Categories -->
+      <div class="col-md-2">
+        <!-- Define Categories -->
+        <div class="list-group mt-3">
+          <a href="/" class="list-group-item list-group-item-action active" aria-current="true">
+            All Images
+          </a>
+
+          {% for i in cats %}
+
+          <a href="/category/{{i.pk}}" class="list-group-item list-group-item-action">{{i.title}}</a>
+        
+          {% endfor %}
+        </div>
+      </div>
+
+
+
+
+
+
+      <!-- Column - B for Images -->
+      <div class="col-md-10">
+        <div class="row mt-3">
+          <div class="col-md-12">
+          <!-- Define Images -->
+            <div class="card-columns">
+              {% for i in img %}
+              
+              <div class="card">
+                <img src="/media/{{i.image}}" class="card-img-top img-fluid img-thumbnail" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">{{i.title}}</h5>
+                      <p class="card-text">{{i.describe}}</p>
+                      <a href="#" class="btn btn-outline-light bg" onclick="showModalwithImage('{{i.image}}')">View</a>
+                  </div>
+              </div>
+            
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+</div>
+
+
+<!-- Modals - it is taking from bootstrap-->
+<!-- Modal -->
+<div class="modal fade" id="ImageModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Prabhi-Vision</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <img src="#!" id="image-show" class="img-fluid" alt="Image Not Loaded"/>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -23,5 +119,28 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
+
+    <!-- This link is also used to view button for the image -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Javascript for View Button -->
+  <script>
+    function showModalwithImage(imageUrl)
+    {
+      $('#ImageModal').modal('show')
+      $("#image-show").attr('src',`/media/${imageUrl}`)
+    }
+    
+    // This is also run
+    //   function showModalwithImage(imageUrl) {
+    //   // Set the src attribute of the image element to the URL of the image
+    //   $('#ImageModal').attr('src', imageUrl);
+  
+    //   // Show the modal
+    //   $('#ImageModal').modal('show');
+    // }
+    
+
+
+  </script>
   </body>
 </html>
